--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="ICON.jpg" type="image/x-icon">
     <title>Ark Survival</title>
-
-    <button onclick="toggleMusica()">🎵 Música</button>
-
-<audio id="musicaFondo" loop>
-    <source src="ARK_ Survival Evolved Theme _ EPIC VERSION [4o4ihIKQXiA].mp3" type="audio/mpeg">
-</audio>
-
 
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 
-     <link rel="icon" href="ICON.jpg" type="image/x-icon">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <button class="boton-musica" onclick="toggleMusica()">🎵 Música <p>clickea para reproducir</p></button>
+
+    <audio id="musicaFondo" loop>
+        <source src="ARK_ Survival Evolved Theme _ EPIC VERSION [4o4ihIKQXiA].mp3" type="audio/mpeg">
+    </audio>
+
+    <!-- IMAGEN PRINCIPAL -->
+    <img src="ART.png" class="logo-ark dino" alt="Ark">
 
     <h1>BIENVENIDOS A LA PAGINA DE ARK SURVIVAL UN JUEGO DE FANTASIA</h1>
 
@@ -38,41 +39,59 @@
         <img src="A2.jpeg" class="dino" alt="">
         <img src="E.jpeg" class="dino" alt="">
 
+        <h1>Versiones Del Juego</h1>
+        <img src="ASA1.png" class="dino" alt="Version Nueva ">
+        <img src="EVO1.jpeg" class="dino" alt="Version Antigua">
+
     </div>
 
-    <!-- JAVASCRIPT PARA LA ANIMACIÓN -->
-   <script>
-    const musica = document.getElementById("musicaFondo");
+    <footer class="footer">
+        <div class="footer-contenido">
+            <h2>Pagina De Ark Survival</h2>
+            <p>Creado por: <strong>Kenneth Misael Torres S.</strong></p>
+            <p>© 2026 Todos los derechos reservados</p>
+            <p class="footer-aviso">
+                Página creada con el fin educativo y de aprendizaje | Pagina estatica
+            </p>
+        </div>
+    </footer>
+    
+    <script>
+        const musica = document.getElementById("musicaFondo");
 
-    function toggleMusica() {
-        if (musica.paused) {
-            musica.play();
-        } else {
-            musica.pause();
+        function toggleMusica() {
+            if (musica.paused) {
+                musica.play();
+            } else {
+                musica.pause();
+            }
         }
-    }
 
-    // --- TU CÓDIGO DE ANIMACIONES ---
-    const titulo = document.getElementById("tituloAnimacion");
-    titulo.style.opacity = 0;
-    titulo.style.transform = "translateY(-40px)";
-
-    setTimeout(() => {
-        titulo.style.transition = "1s";
-        titulo.style.opacity = 1;
-        titulo.style.transform = "translateY(0)";
-    }, 300);
-
-    const dinos = document.querySelectorAll(".dino");
-
-    dinos.forEach((img, index) => {
-        img.style.opacity = 0;
-        img.style.transform = "scale(0.5)";
+        const titulo = document.getElementById("tituloAnimacion");
+        titulo.style.opacity = 0;
+        titulo.style.transform = "translateY(-40px)";
 
         setTimeout(() => {
-            img.style.transition = "0.8s";
-            img.style.opacity = 1;
-            img.style.transform = "scale(1)";
-        }, 800 + index * 300);
-    });
+            titulo.style.transition = "1s";
+            titulo.style.opacity = 1;
+            titulo.style.transform = "translateY(0)";
+        }, 300);
+
+        const dinos = document.querySelectorAll(".dino");
+
+        dinos.forEach((img, index) => {
+            img.style.opacity = 0;
+            img.style.transform = "scale(0.5)";
+
+            setTimeout(() => {
+                img.style.transition = "0.8s";
+                img.style.opacity = 1;
+                img.style.transform = "scale(1)";
+            }, 800 + index * 300);
+        });
+    </script>
+
+
 </script>
+</body>
+</html>
